# SuffixCode-Viewer

./: .gitignore  README.md  build_win.sh  run.sh
.github/workflows/: build.yml
egui_txt_viewer/: Cargo.toml
egui_txt_viewer/src/: main.rs
