[package]
name = "egui_txt_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["default"] }
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }
