[package]
name = "egui_txt_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["default"] }
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "debugapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.profile.release]
panic = "abort"
